objects/Process__c.object
<CustomObject>
    <description>This object is used in conjunction with requirements. Processes are a high level grouping of requirements.</description>
    <fields>
        <fullName>Alternate_Flows__c</fullName>
        <label>Alternate Flows</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assumptions__c</fullName>
        <description>List any generally known assumptions about this experience.</description>
        <inlineHelpText>List any generally known assumptions about this experience.</inlineHelpText>
        <label>Assumptions</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Basic_Flow_of_Events__c</fullName>
        <description>Provide the basic sequence or flow of events for the experience.</description>
        <inlineHelpText>Provide the basic sequence or flow of events for the experience.</inlineHelpText>
        <label>Basic Flow of Events</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brief_Description__c</fullName>
        <description>Provide a brief description of the experience.</description>
        <inlineHelpText>Provide a brief description of the experience.</inlineHelpText>
        <label>Brief Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Metric_Current_Value__c</fullName>
        <label>Business Metric Current Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Metric_Delta__c</fullName>
        <formula>( Business_Metric_Target_Value__c  - Business_Metric_Current_Value__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Metric Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Metric_Target_Value__c</fullName>
        <label>Business Metric Target Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Metric__c</fullName>
        <label>Business Metric</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Value__c</fullName>
        <description>The value we are delivering to the business.  ex. Some kind of efficiency or effectiveness improves y or eliminates x.</description>
        <inlineHelpText>The value we are delivering to the business.  ex. Some kind of efficiency or effectiveness improves y or eliminates x.</inlineHelpText>
        <label>Business Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Constituent_Metric_Current_Value__c</fullName>
        <label>Constituent Metric Current Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Constituent_Metric_Delta__c</fullName>
        <formula>( Constituent_Metric_Target_Value__c - Constituent_Metric_Target_Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constituent Metric Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Constituent_Metric_Target_Value__c</fullName>
        <label>Constituent Metric Target Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Constituent_Metric__c</fullName>
        <label>Constituent Metric</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constituent_Value__c</fullName>
        <description>The value we are delivering to the student or prospective student.  ex. Student gets x.</description>
        <inlineHelpText>The value we are delivering to the student or prospective student.  ex. Student gets x.</inlineHelpText>
        <label>Constituent Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Business_Changes__c</fullName>
        <description>Key role is able to track said constituent and has tool to act when desired behaviors d, e &amp; f does not occur.</description>
        <inlineHelpText>Key role is able to track said constituent and has tool to act when desired behaviors d, e &amp; f does not occur.</inlineHelpText>
        <label>Key Business Changes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Constituent_Changes__c</fullName>
        <description>Student given X earlier in the process, and consistently due to tracking a, b, c.</description>
        <inlineHelpText>Student given X earlier in the process, and consistently due to tracking a, b, c.</inlineHelpText>
        <label>Key Constituent Changes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Performance_Indicators__c</fullName>
        <inlineHelpText>Indicate any key performance indicators or metrics this process is a part of including how the metric is measured.</inlineHelpText>
        <label>Key Performance Indicators</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ordinal__c</fullName>
        <label>Ordinal</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postconditions__c</fullName>
        <description>List any postconditions that must be met as a result of this experience.</description>
        <inlineHelpText>List any postconditions that must be met as a result of this experience.</inlineHelpText>
        <label>Postconditions</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Preconditions__c</fullName>
        <description>List any preconditions that must be met prior to this experience.</description>
        <inlineHelpText>List any preconditions that must be met prior to this experience.</inlineHelpText>
        <label>Preconditions</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Domain_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Domain Object</label>
        <referenceTo>Domain_Object__c</referenceTo>
        <relationshipLabel>Processes</relationshipLabel>
        <relationshipName>Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Object__c</fullName>
        <label>Primary Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Resource</fullName>
                </value>
                <value>
                    <fullName>Project Template</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Milestone</fullName>
                </value>
                <value>
                    <fullName>Skill / Certification</fullName>
                </value>
                <value>
                    <fullName>Resource Request</fullName>
                </value>
                <value>
                    <fullName>Resource Skill Request</fullName>
                </value>
                <value>
                    <fullName>Assignment</fullName>
                </value>
                <value>
                    <fullName>Timecard</fullName>
                </value>
                <value>
                    <fullName>Expense Report</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Adjustment</fullName>
                </value>
                <value>
                    <fullName>Billing Event Batch</fullName>
                </value>
                <value>
                    <fullName>Billing Event</fullName>
                </value>
                <value>
                    <fullName>Billing Event Item</fullName>
                </value>
                <value>
                    <fullName>Expense Type / Limit / Rate</fullName>
                </value>
                <value>
                    <fullName>Rate Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Processes__c</fullName>
        <label>Related Processes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Requirements__c</fullName>
        <label>Special Requirements</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Process</label>
    <nameField>
        <displayFormat>P-{000}</displayFormat>
        <label>Process ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Processes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>